--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
-html {
-  font-family: sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
+
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: #222;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+header h1 {
+  font-family: Staatliches;
+  font-size: 2.85rem;
+  margin: 0.5rem;
+  letter-spacing: 2px;
+  color: white;
+  text-shadow: 5px 5px 0 rgba(153, 153, 153, 0.382);
+}
+
+.container {
+  min-height: 85vh;
+  margin: 1rem;
+  min-width: 30vw;
+  border: 2px solid #444;
+  background: #111;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(15, 1fr);
 }
